@startuml silver_schema_eds
!theme plain
skinparam linetype ortho
skinparam roundcorner 8
skinparam shadowing false
skinparam packageStyle rectangle

skinparam entity<<FACT>> {
    BackgroundColor #FDEDEC
    BorderColor #E74C3C
    HeaderBackgroundColor #FADBD8
}

skinparam entity<<FACT_NEW>> {
    BackgroundColor #FADBD8
    BorderColor #C0392B
    HeaderBackgroundColor #F1948A
}

skinparam entity<<DIMENSION>> {
    BackgroundColor #EBF5FB
    BorderColor #2980B9
    HeaderBackgroundColor #D4E6F1
}

skinparam entity<<DIMENSION_EVOL>> {
    BackgroundColor #E8F8F5
    BorderColor #16A085
    HeaderBackgroundColor #A3E4D7
}

title Couche SILVER (Évolution Lot 2026-08-29) : 4 Facts Indépendants & 4 Dimensions (Star Schema)

package "Couche SILVER (Entrepôt Nettoyé & Structuré)" #FAFAFA {

    ' ==========================================================================
    ' LES 4 DIMENSIONS
    ' ==========================================================================
    package "4 DIMENSIONS" #EBF5FB {
        entity "silver.dim_patients" as dim_patients <<DIMENSION>> {
            + **patient_pseudo_id** : String <<PK>>
            --
            birth_year : UInt16
            sex : String
            region_code : String
        }

        entity "silver.dim_services" as dim_services <<DIMENSION_EVOL>> {
            + **service_code** : String <<PK>>
            --
            service_label : String
            categorie : LowCardinality(String) [Évolution]
            capacite_lits : UInt16 [Évolution]
            pole : LowCardinality(String) [Évolution]
        }

        entity "silver.dim_cim10" as dim_cim10 <<DIMENSION>> {
            + **code_cim10** : String <<PK>>
            --
            libelle : String
        }

        entity "silver.dim_ccam" as dim_ccam <<DIMENSION_EVOL>> {
            + **code_ccam** : String <<PK>>
            --
            libelle : String
            tarif_euros : UInt32
        }
    }

    ' ==========================================================================
    ' LES 4 TABLES DE FAITS (FACTS INDÉPENDANTS)
    ' ==========================================================================
    package "4 TABLES DE FAITS (FACTS INDÉPENDANTS)" #FDEDEC {

        ' FACT 1 : Séjours
        entity "silver.fact_sejours" as fact_sejours <<FACT>> {
            + **stay_id** : String <<PK>>
            --
            # patient_pseudo_id : String <<FK>>
            # service_code : String <<FK>>
            admission_ts : DateTime
            discharge_ts : Nullable(DateTime)
            admission_mode : String
            discharge_mode : String
            is_ongoing : UInt8
            duree_sejour_jours : Nullable(Float32)
        }

        ' FACT 2 : Diagnostics
        entity "silver.fact_diagnostics" as fact_diagnostics <<FACT>> {
            + **stay_id** : String
            + **code_cim10** : String <<FK>>
            --
            # patient_pseudo_id : String <<FK>>
            age_at_diagnostics : UInt8
            diag_type : String
        }

        ' FACT 3 : Monitoring
        entity "silver.fact_monitoring" as fact_monitoring <<FACT>> {
            + **stay_id** : String
            + **ts** : DateTime
            --
            # service_code : String <<FK>>
            heart_rate : Nullable(Int16)
            spo2 : Nullable(Int16)
            temp_c : Nullable(Float32)
            is_alert : UInt8
            is_alert_fc : UInt8
            is_alert_spo2 : UInt8
            is_alert_temp : UInt8
            alert_reasons : String
        }

        ' FACT 4 : Actes Médicaux (NOUVEAU)
        entity "silver.fact_acte" as fact_acte <<FACT_NEW>> {
            + **acte_id** : UUID <<PK>>
            --
            stay_id : String
            # service_code : String <<FK>>
            # code_ccam : String <<FK>>
            acte_ts : DateTime
        }
    }
}

' ==============================================================================
' RELATIONS DIMENSIONNELLES (Star Schema : Relations Facts <-> Dimensions)
' ==============================================================================
dim_patients ||--o{ fact_sejours : "1 patient : N séjours"
dim_services ||--o{ fact_sejours : "1 service : N séjours"

dim_patients ||--o{ fact_diagnostics : "1 patient : N diagnostics"
dim_cim10    ||--o{ fact_diagnostics : "1 code CIM : N diagnostics"

dim_services ||--o{ fact_monitoring : "1 service : N mesures"

dim_services ||--o{ fact_acte : "1 service : N actes"
dim_ccam     ||--o{ fact_acte : "1 code CCAM : N actes"

@enduml
